[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Fonts/novem___.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://MainMenu/MainMenuScene.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sounds/music.ogg" type="AudioStream" id=3]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Assets/Fonts/default.ttf"

[sub_resource type="DynamicFont" id=2]
size = 50
outline_size = 1
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 25
font_data = ExtResource( 1 )

[node name="Menu" type="MarginContainer"]
custom_constants/margin_right = 80
custom_constants/margin_top = 80
custom_constants/margin_left = 80
custom_constants/margin_bottom = 80
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
movementSpeed = 10
maxMovement = 20

[node name="MenuContainer" type="HBoxContainer" parent="."]
margin_left = 80.0
margin_top = 80.0
margin_right = 607.0
margin_bottom = 280.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MenuContainer"]
margin_right = 161.0
margin_bottom = 200.0

[node name="Title" type="Label" parent="MenuContainer/VBoxContainer"]
margin_right = 161.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 2 )
text = "hudunnit"

[node name="Options" type="VBoxContainer" parent="MenuContainer/VBoxContainer"]
margin_top = 52.0
margin_right = 161.0
margin_bottom = 168.0

[node name="NewGame" type="Label" parent="MenuContainer/VBoxContainer/Options"]
margin_right = 161.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 3 )
text = "New Game"

[node name="Options" type="Label" parent="MenuContainer/VBoxContainer/Options"]
margin_top = 30.0
margin_right = 161.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 3 )
text = "Options"

[node name="Credits" type="Label" parent="MenuContainer/VBoxContainer/Options"]
margin_top = 60.0
margin_right = 161.0
margin_bottom = 86.0
custom_fonts/font = SubResource( 3 )
text = "Credits"

[node name="Exit" type="Label" parent="MenuContainer/VBoxContainer/Options"]
margin_top = 90.0
margin_right = 161.0
margin_bottom = 116.0
custom_fonts/font = SubResource( 3 )
text = "Exit"

[node name="CenterContainer" type="CenterContainer" parent="MenuContainer"]
margin_left = 211.0
margin_right = 527.0
margin_bottom = 200.0

[node name="OptionsOptions" type="VBoxContainer" parent="MenuContainer/CenterContainer"]
margin_top = 57.0
margin_right = 316.0
margin_bottom = 143.0

[node name="HBoxContainer" type="HBoxContainer" parent="MenuContainer/CenterContainer/OptionsOptions"]
margin_right = 316.0
margin_bottom = 26.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 100

[node name="SoundToggle" type="Label" parent="MenuContainer/CenterContainer/OptionsOptions/HBoxContainer"]
margin_right = 190.0
margin_bottom = 26.0
rect_min_size = Vector2( 190, 0 )
custom_fonts/font = SubResource( 3 )
text = "Game Audio"

[node name="SoundToggleValue" type="Label" parent="MenuContainer/CenterContainer/OptionsOptions/HBoxContainer"]
margin_left = 290.0
margin_right = 316.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 3 )
text = "On"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="MenuContainer/CenterContainer/OptionsOptions"]
margin_top = 30.0
margin_right = 316.0
margin_bottom = 56.0
size_flags_horizontal = 3
custom_constants/separation = 100

[node name="SoundVolume" type="Label" parent="MenuContainer/CenterContainer/OptionsOptions/HBoxContainer2"]
margin_right = 190.0
margin_bottom = 26.0
rect_min_size = Vector2( 190, 0 )
custom_fonts/font = SubResource( 3 )
text = "Sound Volume"

[node name="SoundVolumeValue" type="Label" parent="MenuContainer/CenterContainer/OptionsOptions/HBoxContainer2"]
margin_left = 290.0
margin_right = 303.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 3 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer3" type="HBoxContainer" parent="MenuContainer/CenterContainer/OptionsOptions"]
margin_top = 60.0
margin_right = 316.0
margin_bottom = 86.0
size_flags_horizontal = 3
custom_constants/separation = 100

[node name="MusicVolume" type="Label" parent="MenuContainer/CenterContainer/OptionsOptions/HBoxContainer3"]
margin_right = 190.0
margin_bottom = 26.0
rect_min_size = Vector2( 190, 0 )
custom_fonts/font = SubResource( 3 )
text = "Music Volume"

[node name="MusicVolumeValue" type="Label" parent="MenuContainer/CenterContainer/OptionsOptions/HBoxContainer3"]
margin_left = 290.0
margin_right = 303.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 3 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditsContainer" type="MarginContainer" parent="."]
margin_left = 80.0
margin_top = 80.0
margin_right = 607.0
margin_bottom = 280.0

[node name="CreditsLabel" type="Label" parent="CreditsContainer"]
margin_right = 527.0
margin_bottom = 200.0
custom_fonts/font = SubResource( 3 )
text = "Game Created by:
- Minus
- Szatku
- Dante
- Another Guy

For Ludum Dare 47 Game Jam."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menu_bgm" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
autoplay = true
bus = "Music"
